--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyDT8IZZ-jjUK1J7el83zWKMo4_HZD0iYic",
+        authDomain: "mini-store-92400.firebaseapp.com",
+        databaseURL: "https://mini-store-92400.firebaseio.com",
+        projectId: "mini-store-92400",
+        storageBucket: "mini-store-92400.appspot.com",
+        messagingSenderId: "640031242954",
+        appId: "1:640031242954:web:f282598060c1aa451fd233",
+        measurementId: "G-LEB5FWZVQW"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
